--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,35 @@
 @tailwind components;
 
 @tailwind utilities;
+
+.loader {
+  border-top-color: #f56565;
+  -webkit-animation: spinner 1.5s linear infinite;
+  animation: spinner 1.5s linear infinite;
+}
+
+@-webkit-keyframes spinner {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+::-webkit-scrollbar {
+  width: 10px !important;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #d3c6c6 !important;
+  border-radius: 6px !important;
+  padding: 12px;
+}
